apps/auth/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: auth
spec:
  ports:
    - port: 9091
  selector:
    app: authelia
